Criacao do service e controller de Conta, e modificacao no repository de Transferencia e model de Conta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Servidor
+server.port=8080
